@@ -1,10 +1,14 @@
 02-01-18 : The mysteries of finance in The World do not include negative
            amounts of money.
 
+01-29-18 : Doors and fixed containers such as chests mysteriously unjam or
+           relock themselves over time. What strange entity could be
+           responsible?
+
 01-29-18 : Jammed locks don't affect doorbash.
 
-01-29-18 : You must be dextrous and not agile to avoid jamming locks while
-           picking them.
+01-29-18 : You must be dextrous and not agile to avoid jamming difficult locks
+           while picking them.
 
 01-22-18 : Bandaging of head and arms now uses a more appropriate number of
            bandages.
